--- a/WebApplication1/index.html
+++ b/WebApplication1/index.html
@@ -10,7 +10,7 @@
     <script src="Scripts/Controllers/EmployeeController.js"></script>
     <link href="Content/bootstrap.css" rel="stylesheet" />
 </head>
-<body ng-app="myApp" class="container">
+<body ng-app="testModule" class="container">
     <div ng-controller="EmployeeController">
 
         <table>
@@ -19,6 +19,13 @@
                 <td>
 
                     <input type="text" ng-model="Name" />
+                </td>
+            </tr>
+            <tr>
+                <td>Email</td>
+                <td>
+
+                    <input type="text" ng-model="Email" />
                 </td>
             </tr>
 
